--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "react-bootstrap": "^2.9.1",
         "react-js-pagination": "^3.0.3",
+        "react-mentions": "^4.4.10",
         "react-toastify": "^9.1.3"
     }
 }
